# boutique-bouquet

./: .gitignore  IMPROVEMENTS.md  OBSERVABILITY.md  README.md  SEO_IMPLEMENTATION.md  docker-compose.prod.yml  docker-compose.yml  yatr.toml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev
backend/examples/: hash_password.rs
backend/migrations/: 001_initial.sql  002_seed_data.sql
backend/src/: auth.rs  error.rs  main.rs  models.rs
backend/src/handlers/: admin.rs  mod.rs  orders.rs  products.rs
deploy/: nginx-studio-zemya.conf  setup.sh  studio-zemya.service
frontend/: .env.example  Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/orders/: page.tsx
frontend/src/app/admin/products/: page.tsx
frontend/src/app/cart/: page.tsx
frontend/src/app/checkout/: page.tsx
frontend/src/app/order-confirmation/: page.tsx
frontend/src/app/products/[id]/: page.tsx
frontend/src/components/: Button.tsx  CookieConsent.tsx  Header.tsx  ProductCard.tsx  ProductDetail.tsx  ProductGrid.tsx
frontend/src/lib/: api.ts
frontend/src/store/: useAuthStore.ts  useCartStore.ts
frontend/src/types/: index.ts
